compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_vertical_line.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2312
expression: "pub fn main() { True ｜｜ False }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { True ｜｜ False }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:22
  │
1 │ pub fn main() { True ｜｜ False }
  │                      ^^ Unexpected character

This looks like ascii pipe, but it is actually the unicode fullwidth
vertical line.
